# ml-notebooks-portfolio

./: .gitignore  Pipfile  README.md  dnn_cnn_diamonad_val.ipynb  dnn_cnn_diamond_val.ipynb  dog_vs_cat_cnn.ipynb  pyproject.toml  transformer_from_scratch.ipynb
nlp/classification/: bert_sentiment.ipynb  lstm_sentiment.ipynb
tabular/classification/: fraud-detection.ipynb
vision/classification/: cnn-classifier.ipynb
vision/ocr/: captcha-ocr.ipynb
