[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Nick Yazdani <nnyazdani92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "2.11.0"
matplotlib = "^3.7.1"
swifter = "^1.3.4"
wordcloud = "^1.9.1.1"
scikit-learn = "^1.2.2"
torch = "^2.0.0"
transformers = "^4.28.1"
datasets = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
